# options-trading-project

./: .dockerignore  CMakeLists.txt  Dockerfile  dev.sh  docker-compose.dev.yml  docker-compose.yml
include/: BlackScholesModel.hpp  ExecutionEngine.hpp  GuiApp.hpp  MarketDataHandler.hpp  OptionTypes.hpp  OrderManagementSystem.hpp  PlotWindow.hpp  RiskManagement.hpp  RiskMetrics.hpp
include/services/: execution_service.hpp  market_data_service.hpp  order_management_service.hpp
protos/: execution.proto  market_data.proto  order_management.proto
src/: BlackScholesModel.cpp  ExecutionEngine.cpp  GuiApp.cpp  MarketDataHandler.cpp  OrderManagementSystem.cpp  PlotWindow.cpp  RiskManagement.cpp  grpc_server.cpp  main.cpp
src/services/: execution_service.cpp  market_data_service.cpp  order_management_service.cpp
